--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to HugeZen.</h3>
 
-<p> <code>歡樂無限</code> </p>
+<p> <code>智慧人生！歡樂無限！趣味寶庫！</code> </p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>the tao is silent / 道是靜的, 1977</h3>
