--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
         <ul>
-          <li><a class="buttons github" href="https://github.com/naredbuddha">GitHub Profile</a></li>
+          <li><a class="buttons github" href="https://github.com">GitHub Profile</a></li>
         </ul>
 
       </header>
